[gd_scene load_steps=3 format=3 uid="uid://3ts3ees51q4n"]

[ext_resource type="Script" path="res://src/ui/vending_menu.gd" id="1_mv774"]
[ext_resource type="Texture2D" uid="uid://it8hjt58tya5" path="res://icon.svg" id="2_ue6qt"]

[node name="VendingMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("1_mv774")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.490196, 0.490196, 0.490196, 0.537255)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainerLeft" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainerLeft"]
layout_mode = 2
size_flags_vertical = 3

[node name="ModificationImage" type="TextureRect" parent="HBoxContainer/VBoxContainerLeft/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_ue6qt")

[node name="NameandType" type="HBoxContainer" parent="HBoxContainer/VBoxContainerLeft"]
layout_mode = 2

[node name="ModName" type="Label" parent="HBoxContainer/VBoxContainerLeft/NameandType"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Sample Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ModType" type="Label" parent="HBoxContainer/VBoxContainerLeft/NameandType"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Sample Type"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ModInfo" type="Label" parent="HBoxContainer/VBoxContainerLeft"]
unique_name_in_owner = true
layout_mode = 2
text = "This is sample text that will be replace when we have want to display a gun modification thing"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainerLeft"]
layout_mode = 2
size_flags_vertical = 3

[node name="Cost" type="Label" parent="HBoxContainer/VBoxContainerLeft/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Cost: "
horizontal_alignment = 1

[node name="PurchaseButton" type="Button" parent="HBoxContainer/VBoxContainerLeft/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Purchase"

[node name="VBoxContainerRight" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainerRight"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainerRight/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="ExitButton" type="TextureButton" parent="HBoxContainer/VBoxContainerRight"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Take change and leave"
texture_normal = ExtResource("2_ue6qt")

[connection signal="pressed" from="HBoxContainer/VBoxContainerLeft/HBoxContainer/PurchaseButton" to="." method="_on_purchase_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainerRight/ExitButton" to="." method="_on_exit_button_pressed"]
